objects/Request_for_Information_RFI__c.object
<CustomObject>
    <fields>
        <fullName>RFI_Number__c</fullName>
        <description>Use this field to generate the RFI number</description>
        <inlineHelpText>Use this field to generate the RFI number, it will show on the &quot;Generate Response&quot; pdf for out going RFI&apos;s.</inlineHelpText>
        <label>RFI Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Type__c</fullName>
        <description>Defines who RFI should to go. Engineering - Ops SDE (PEM), Project Management - Project Manager, Field Operatios - Site Super</description>
        <label>RFI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual/Other</fullName>
                    <label>Project Management</label>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Field Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Solution__c</fullName>
        <inlineHelpText>Enter the recommended solution here. If there is none you can enter None or N/A</inlineHelpText>
        <label>Recommended Solution</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordType_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Portal__c</fullName>
        <formula>IF( 
OR( 
RecordTypeId = &quot;01280000000U9s1&quot;,
RecordTypeId = &quot;01280000000U9s6&quot; ), &quot;RFI&quot;,
IF( 
RecordTypeId = &quot;012800000007gsp&quot;, &quot;Submittal&quot;,
NULL ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Response_Date__c</fullName>
        <description>Tracks the date by which a repsonse is requested.</description>
        <inlineHelpText>The target date that you are asking the approver to respond by. You cannot set this for the same day that you submit the RFI.</inlineHelpText>
        <label>Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the RFI response attached?</inlineHelpText>
        <label>Response Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Attachments__c</fullName>
        <label>Response Attachments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Requests_for_Information_RFIs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Days__c</fullName>
        <formula>IF( ISBLANK(Issue_Rejected_Date__c)= FALSE,  Issue_Rejected_Date__c - DATEVALUE(CreatedDate) ,
IF( ISPICKVAL(Status__c , &quot;Resolved&quot;),  Issue_Closed_Date__c -DATEVALUE(CreatedDate),
IF( ISPICKVAL(Status__c , &quot;Closed&quot;),  Issue_Closed_Date__c -DATEVALUE(CreatedDate), 
IF( ISPICKVAL(Status__c , &quot;Submitted/Pending&quot;),  TODAY() -DATEVALUE(CreatedDate),
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Stage__c</fullName>
        <inlineHelpText>Select Respond if communication is ongoing, 3rd Party when it is re-assigned as such, Final when the RFI is completed</inlineHelpText>
        <label>Response Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>The response details to the issue submitted from the approver. Must be filled out before RFI can be complete.</inlineHelpText>
        <label>Response History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Impact__c</fullName>
        <inlineHelpText>Enter the # of calendar days that the job will be delayed.</inlineHelpText>
        <label>Schedule Impact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Updated_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, will send email containing Response field to selected users and the user in the From field.</inlineHelpText>
        <label>Send Updated Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional site visited</description>
        <inlineHelpText>Additional sites in same visit report</inlineHelpText>
        <label>Site 2</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Issue Tracker (Site 2)</relationshipLabel>
        <relationshipName>Issue_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional sites in same visit report</description>
        <inlineHelpText>Additional sites in same visit report</inlineHelpText>
        <label>Site 3</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Issue Tracker (Site 3)</relationshipLabel>
        <relationshipName>Issue_Tracker2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional sites in same visit report</description>
        <inlineHelpText>Additional sites in same visit report</inlineHelpText>
        <label>Site 4</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Issue Tracker (Site 4)</relationshipLabel>
        <relationshipName>Issue_Tracker3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Super__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site Super from associated Site. Populated by Process Builder on creation/change.</description>
        <label>Site Super</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ISS_Site_Super</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Superintendent_Email__c</fullName>
        <description>used in issue tracker email alert</description>
        <inlineHelpText>pulls from related site</inlineHelpText>
        <label>Site Superintendent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Site_Text__c</fullName>
        <formula>Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ASProject__c</field>
                <operation>equals</operation>
                <valueField>Site__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Issue Tracker</relationshipLabel>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specification_Reference__c</fullName>
        <description>Tracks any specification reference information pertaining to the RFI.</description>
        <inlineHelpText>Use to reference the location on the plans where the information exists that is being discussed in the RFI.</inlineHelpText>
        <label>Specification Reference</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <description>Modified Status_Highlight__c for use in Subcontractor Portal</description>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IRG&quot;, &quot;Response Created&quot;),
IF(ISPICKVAL(Status__c,&quot;Approved&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=015800000014vi4&quot;, &quot;Approved&quot;),
IF(ISPICKVAL(Status__c,&quot;Approved as Corrected&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=015800000014vhz&quot;, &quot;Approved as Corrected&quot;),  
IF(ISPICKVAL(Status__c,&quot;Submitted/Pending&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IRV&quot;, &quot;Submitted Pending&quot;),
IF(ISPICKVAL(Status__c,&quot;Approval Pending&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IRV&quot;, &quot;Submitted Pending&quot;),  
IF(ISPICKVAL(Status__c,&quot;Rejected&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IRQ&quot;, &quot;Rejected&quot;), 
IF(ISPICKVAL(Status__c,&quot;New&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IR6&quot;, &quot;New&quot;), 
IF(ISPICKVAL(Status__c,&quot;Re-assigned&quot;),IMAGE( &quot;https://c.cs61.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IRa&quot;, &quot;Re-assigned&quot;), 
&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Highlight__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSpt&quot;, &quot;Response Created&quot;),
IF(ISPICKVAL(Status__c,&quot;Approved&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014vi4&quot;, &quot;Approved&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved as Corrected&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014vhz&quot;, &quot;Approved as Corrected&quot;), 
IF(ISPICKVAL(Status__c,&quot;Submitted/Pending&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSpy&quot;, &quot;Submitted Pending&quot;),
IF(ISPICKVAL(Status__c,&quot;Approval Pending&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSpy&quot;, &quot;Submitted Pending&quot;), 
IF(ISPICKVAL(Status__c,&quot;Rejected&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSq8&quot;, &quot;Rejected&quot;),
IF(ISPICKVAL(Status__c,&quot;Cancelled&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=0158000000151bq&quot;, &quot;Cancelled&quot;),
IF(ISPICKVAL(Status__c,&quot;Clarification Needed&quot;),IMAGE( &quot;https://na29.salesforce.com/servlet/servlet.FileDownload?file=015800000014vi9&quot;, &quot;Clarifications Needed&quot;),
IF(ISPICKVAL(Status__c,&quot;Resolved&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014viJ&quot;, &quot;Resolved&quot;), 
IF(ISPICKVAL(Status__c,&quot;New&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSpe&quot;, &quot;New&quot;), 
IF(ISPICKVAL(Status__c,&quot;Re-assigned&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSq3&quot;, &quot;Re-assigned&quot;), 
&quot;&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This changes based on the status of the issue.</inlineHelpText>
        <label>Status Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to track and manage the status of the RFI.</description>
        <inlineHelpText>Used to track and manage the status of the RFI.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted/Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Clarification Needed</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Re-assigned</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Contains a brief description of the subject of the RFI.</description>
        <inlineHelpText>Enter a brief description of the subject of this Issue/RFI.</inlineHelpText>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject_common_field__c</fullName>
        <description>Used as a common field for the Issue Tracker Joined reports</description>
        <formula>Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_RFI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User pushes the Submit button which marks this checkbox true and in turn triggers an email alert.</description>
        <label>Submit RFI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submittal_Hyperlink__c</fullName>
        <description>Set by process field update when Submittal is created. Allows Submittal name to be displayed as a clickable link via formula on Submittal Link field.</description>
        <label>Submittal Hyperlink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submittal_Link__c</fullName>
        <formula>HYPERLINK( Submittal_Hyperlink__c,  ( Submittal_Name__c ), &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click here =&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submittal_Name__c</fullName>
        <label>Submittal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submittal_Type__c</fullName>
        <description>Sub fills this out when creating Spec and Submittal populates to the Child Submittal record via Process. Reduces confusion for Subs when using the Subcontractor Portal</description>
        <inlineHelpText>Select the appropriate Submittal type</inlineHelpText>
        <label>Submittal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC Electrical</fullName>
                </value>
                <value>
                    <fullName>DC Electrical</fullName>
                </value>
                <value>
                    <fullName>Civil Materials</fullName>
                </value>
                <value>
                    <fullName>Structural Materials</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submittal__c</fullName>
        <formula>IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015340000029L4D&quot;, &quot;Click&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submittal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Tag issues with the relevant description so Borrego can see issues that cut across multiple projects.</inlineHelpText>
        <label>Tag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design standards</fullName>
                </value>
                <value>
                    <fullName>Pricing tool</fullName>
                </value>
                <value>
                    <fullName>Product issue</fullName>
                </value>
                <value>
                    <fullName>AHJ Comments</fullName>
                </value>
                <value>
                    <fullName>Project Preparation</fullName>
                </value>
                <value>
                    <fullName>Site Discovery</fullName>
                </value>
                <value>
                    <fullName>Value Engineering</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Borrego_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Borrego Employee who will approve this</inlineHelpText>
        <label>To (Borrego Approver)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Information_RFIs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <inlineHelpText>Select the correct track based on the equipment type</inlineHelpText>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track 1 - Modules and Inverters</fullName>
                </value>
                <value>
                    <fullName>Track 2 - Racking, DAS, and Combiners</fullName>
                </value>
                <value>
                    <fullName>Track 3 - Borrego Supplied Major Components</fullName>
                </value>
                <value>
                    <fullName>Track 4 - Subcontractor Supplied Major Components</fullName>
                </value>
                <value>
                    <fullName>Track 5 - Subcontractor Supplied Minor Components</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Select the type of activity that was scheduled.</inlineHelpText>
        <label>Site Visit Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical Site Visit</fullName>
                </value>
                <value>
                    <fullName>Civil Site Visit</fullName>
                </value>
                <value>
                    <fullName>Structural Site Visit</fullName>
                </value>
                <value>
                    <fullName>Premobilization Meeting</fullName>
                </value>
                <value>
                    <fullName>Kickoff Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Stream__c</fullName>
        <formula>ASProject__r.Value_Stream__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Stream</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Subcontractor Portal workflows. Marked true when PM/PEM submits the RFI to a 3rd party. Once the 3rd party responds, it is marked false. Allows to determine direction of communication.</description>
        <label>With 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>With_Sub__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in Subcontractor Portal workflows. Marked true When the PM/PEM submits the RFI to the Sub. Once the Sub responds to the PM/PEM the checkbox becomes false. Allows workflows to determine direction of communication.</description>
        <label>With Sub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used when an Incoming RFI needs to be routed to a 3rd party</description>
        <inlineHelpText>If this RFI needs to be routed to a 3rd party, enter that party here.</inlineHelpText>
        <label>3rd Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issue Tracker (3rd Party)</relationshipLabel>
        <relationshipName>Issue_Tracker3rd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test_hyperlink__c</fullName>
        <label>test hyperlink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Issue Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_PM__c</columns>
        <columns>Subject__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status_Highlight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Issue_Trackers2</fullName>
        <columns>NAME</columns>
        <columns>Record_Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>ASProject__c</columns>
        <columns>Request_Response_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Cancelled</value>
        </filters>
        <label>My Issue Trackers</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pre_Kickoff_Eng_and_Site_Visit_Report</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_PM__c</columns>
        <columns>Subject__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status_Highlight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Information_RFI__c.Pre_Kickoff_Engineering,Request_for_Information_RFI__c.Construction_Control</value>
        </filters>
        <label>Pre-Kickoff Eng and Site Visit Report</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFIs</fullName>
        <columns>File_Type__c</columns>
        <columns>Status_Highlight__c</columns>
        <columns>Issue_Tracker_Hyperlink__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Response_Date__c</columns>
        <columns>ASProject__c</columns>
        <columns>Site__c</columns>
        <columns>Internal_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Information_RFI__c.Incoming,Request_for_Information_RFI__c.Outgoing_RFI</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/19/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>My_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>RFIs</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFIs_and_Submittals</fullName>
        <columns>File_Type__c</columns>
        <columns>Status_Highlight__c</columns>
        <columns>Issue_Tracker_Hyperlink__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Response_Date__c</columns>
        <columns>ASProject__c</columns>
        <columns>Site__c</columns>
        <columns>Internal_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Information_RFI__c.Incoming,Request_for_Information_RFI__c.Outgoing_RFI,Request_for_Information_RFI__c.Specs_and_Submittals</value>
        </filters>
        <filters>
            <field>My_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2017 12:00 AM</value>
        </filters>
        <label>RFIs and Submittals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submittals</fullName>
        <columns>File_Type__c</columns>
        <columns>Status_Highlight__c</columns>
        <columns>Issue_Tracker_Hyperlink__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Response_Date__c</columns>
        <columns>ASProject__c</columns>
        <columns>Site__c</columns>
        <columns>Internal_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Information_RFI__c.Specs_and_Submittals</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/19/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>My_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Submittals</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ISS-{000000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Tracker</pluralLabel>
    <recordTypes>
        <fullName>AHJ_Comments</fullName>
        <active>true</active>
        <description>These are issues that will affect the plan set initiated by the AHJ</description>
        <label>AHJ Comments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Addenda_Construction_Bulletins</fullName>
        <active>true</active>
        <label>Addenda/Construction Bulletins</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Request</fullName>
        <active>true</active>
        <description>These are issues that will affect the plan set initiated by the &quot;Client,&quot; who could be defined as the landowner, the off-taker or the financier/owner of the project</description>
        <label>Client Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Construction_Bulletin</fullName>
        <active>false</active>
        <description>Updates to the plans PRIOR to a sub being assigned to the project. These are changes to the plans  that are initiated by the Engineering Team.</description>
        <label>Construction Bulletin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Construction_Control</fullName>
        <active>true</active>
        <description>Use to document Construction Control Activities</description>
        <label>Site Visit Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eng_Clarifications</fullName>
        <active>false</active>
        <label>Eng Clarifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engineering</fullName>
        <active>true</active>
        <description>Changes to the plans that are initiated by the Engineering Team</description>
        <label>Engineering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incoming</fullName>
        <active>true</active>
        <description>Use for logging RFIs or Transmittals sent to Borrego requesting information, clarity or approval on an issue.</description>
        <label>Incoming RFI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>These are issues that are initiated by a group outside of the choices provided</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outgoing_RFI</fullName>
        <active>true</active>
        <description>Use for sending RFIs - Issues for an external party to resolve. External parties include but are not limited to customers, third party engineers and architects.</description>
        <label>Outgoing RFI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Kickoff_Engineering</fullName>
        <active>true</active>
        <description>For use by Project Developers and Application Engineers to request engineering support prior to kick-off.</description>
        <label>Pre-Kickoff Engineering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Preparation</fullName>
        <active>true</active>
        <description>Issues that arise out of incomplete project preparation at the Handoff point during the transition from Sales to Ops</description>
        <label>Project Preparation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Discovery</fullName>
        <active>true</active>
        <description>Issues that arise out of the site discovery process</description>
        <label>Site Discovery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Specs_and_Submittals</fullName>
        <active>true</active>
        <description>Use this when requesting a spec or a submittal</description>
        <label>Specs and Submittals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submittals</fullName>
        <active>false</active>
        <label>Submittals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility_Communications</fullName>
        <active>false</active>
        <label>Utility Communications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Value_Engineering</fullName>
        <active>true</active>
        <description>Issues that arise out if the value engineering process</description>
        <label>Value Engineering</label>
    </recordTypes>
</CustomObject>